css/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --clr-text: #333;
  --clr-dark: #140200;
  --clr-light: #fff;
  --clr-light-darker: rgb(233, 233, 233);
  --clr-primary: #4b2533;
  --clr-accent: #270601;
  --btn-primary: #db0000;
  --btn-primary-darker: #990000;
  --btn-secondary: #fff;
  --btn-secondary-darker: rgb(207, 207, 207);
  --fw-normal: 400;
  --fw-bold: 700;
  --fw-black: 900;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Roboto", sans-serif;
  color: var(--clr-light);
  background-color: var(--clr-primary);
  font-size: 1.25rem;
  line-height: 1.2;
  text-align: center;
  margin: 0;
  padding: 0;
}

section {
  padding: 1em;
  padding-bottom: 5em;
}

img {
  width: 100%;
  border-radius: 1em;
}

/* Typography */
.text-red {
  color: var(--btn-primary);
}

.text-gradient {
  background: -webkit-linear-gradient(#db0000, #fee16a);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

h1 {
  font-weight: var(--fw-black);
  font-size: 2em;
}

h2 {
  font-weight: var(--fw-bold);
}

h1,
h2,
h3 {
  text-align: center;
}

p {
  font-weight: var(--fw-normal);
}

/* Navigation */
nav {
  background-color: var(--clr-dark);
  padding: 1em;
}

.dnf-icon {
  width: 75px;
}

.nav-list {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  gap: 1em;
  margin: 0;
  padding: 0;
  font-weight: var(--fw-bold);
  list-style-type: none;
}

.nav-link {
  text-decoration: none;
  color: var(--clr-light);
}

.nav-link:hover,
.nav-link:focus {
  color: var(--btn-primary);
  text-decoration: underline;
}

/* Buttons */
.btn {
  display: inline-block;
  padding: 0.75em 1em;
  border: none;
  border-radius: 0.5em;
  font-size: 1rem;
  font-weight: var(--fw-bold);
  text-transform: uppercase;
  text-decoration: none;
  cursor: pointer;
}

.btn:first-child {
  margin-right: 0.5em;
}

.btn-solid {
  background: var(--btn-primary);
  color: var(--clr-light);
}

.btn-solid:hover {
  background-color: var(--btn-primary-darker);
}

.btn-outlined {
  background-color: var(--btn-secondary);
  color: var(--btn-primary);
  border: 2px solid var(--btn-primary);
}

.btn-outlined:hover {
  background-color: var(--btn-secondary-darker);
}

/* Layout */
.hero-section {
  background-color: var(--clr-accent);
  padding: 0 0 3em 0;
}

.hero-image {
  border-radius: 0;
}

.hero-product {
  margin: 0 1em;
}

@media (min-width: 950px) {
  .hero-section {
    background-image: url("../images/dnf-striker.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 90vh;
    position: relative;
    color: var(--clr-light);
  }

  .hero-image {
    display: none;
  }

  .hero-product {
    background-color: rgba(0, 0, 0, 0.7);
    border-radius: 1em;
    padding: 1em;
    max-width: 450px;

    position: absolute;
    top: 50%;
    left: 22%;
    transform: translate(-50%, -50%);
  }
}

.character-grid {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 0.5em;
  margin: 1em auto;
  max-width: 1400px;
}

.character-grid img {
  opacity: 0.7;
}

.character-grid img:hover,
.character-grid img:focus {
  opacity: 1;
}

@media (min-width: 500px) {
  .character-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 900px) {
  .character-grid {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 1200px) {
  .character-grid {
    grid-template-columns: repeat(4, 1fr);
  }
}

.about-section {
  background-color: var(--clr-accent);
}

.about-text {
  text-align: left;
}

.about-grid {
  display: grid;
  grid-template-columns: 1fr;
  gap: 2em;
  margin: 1em auto;
  max-width: 1000px;
}

@media (min-width: 750px) {
  .about-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

/* Scroll to Top */
.scroll-to-top {
  position: fixed;
  border-radius: 2em;
  text-decoration: none;
  box-shadow: 0 0 1em rgba(0, 0, 0, 0.3);

  /* bottom: 1rem; right: 1rem;  <-- same as inset below */
  inset: auto 0.5rem 0.5rem auto;
}

.arrow-icon {
  width: 60px;
  border-radius: 2em;
  background-color: var(--btn-primary-darker);
}

@media (min-width: 500px) {
  .scroll-to-top {
    inset: auto 1rem 1rem auto;
    border-radius: 3em;
  }
}

/* Modal */
.modal {
  display: none;
  position: fixed;
  z-index: 9999;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
}

.trailer {
  max-width: 1400px;
  margin: auto;
  padding-top: 10%;
}

@media (min-width: 1200px) {
  .trailer {
    padding-top: 1em;
  }
}

.container {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
}

.responsive-iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.close {
  color: var(--btn-secondary);
  float: right;
  margin-right: 0.5em;
  font-size: 2em;
  font-weight: var(--fw-bold);
}

.close:hover,
.close:focus {
  color: var(--btn-primary);
  text-decoration: none;
  cursor: pointer;
}

/* Footer */
footer {
  background-color: var(--clr-primary);
  padding: 2em 0;
  max-width: 1300px;
  margin: 0 auto;
}

.dnf-icon-footer {
  width: 150px;
}

.footer-list,
.footer-socials {
  margin: 0;
  padding: 0;
  font-weight: var(--fw-bold);
  list-style-type: none;
  margin: 1em 0;
}

.footer-list {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.footer-link {
  text-decoration: none;
  color: var(--btn-secondary);
}

.footer-link:hover,
.footer-link:focus {
  color: var(--btn-primary);
  text-decoration: underline;
}

.footer-socials {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 1em;
}

.social-link {
  width: 50px;
}

@media (min-width: 800px) {
  footer {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    padding: 3em 0;
  }

  .footer-list {
    flex-direction: row;
    align-items: center;
  }
}

